# ocr-pipeline

./: .gitignore  CLAUDE.md  README.md  debug_dataset.py  pyproject.toml  ruff.toml
configs/: epstractor-raw.yaml
src/ocr_project/: __init__.py  server.py
src/ocr_project/cli/: __init__.py  main.py
src/ocr_project/congressional/: __init__.py  config.py  manifest.py  types.py
src/ocr_project/dataset/: __init__.py  config.py  export.py  processor.py
src/ocr_project/models/: __init__.py  deepseek_ocr.py  vllm_client.py
src/ocr_project/utils/: __init__.py  file_io.py  image.py  pdf.py
tests/: __init__.py  test_basic.py  test_cli.py  test_dataset_config.py  test_dataset_processor.py  test_dependencies.py  test_pdf.py  test_utils.py  test_vllm_client.py
tests/congressional/: __init__.py  test_manifest.py  test_types.py
